# spaces-notebooks

./: .gitignore  .pre-commit-config.yaml  01 - Getting Started with Notebooks.ipynb.json  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  meta.toml  setup.cfg
.github/workflows/: deploy-bifrost.yml  pre-commit.yml  publish-samples.yml  publish.yml  release-samples.yml
authors/: bharath-swamy.toml  chetan-thote.toml  madhukar-kumar.toml  singlestore.toml
lessons/: it-threat-detection.toml
notebooks/: 02 - Notebook Basics.ipynb.json  03 - Image Matching with SQL.ipynb.json  04 - Semantic Search with OpenAI.ipynb.json  05 - Semantic Search.ipynb.json  06 - Movie Recommendation in SingleStoreDB.ipynb.json  07 - Atlas & Kai for Mongo Side by Side.ipynb.json  Projections2.ipynb  Update Returning.ipynb  load-CSV-data-S3
notebooks/Atlas & Kai for Mongo Side-by-Side/: meta.toml
notebooks/Getting Started with Notebooks/: Getting Started with Notebooks.ipynb  meta.toml
notebooks/How-to-Build-LLM-Apps-that-can-See-Hear-Speak/: How-to-Build-LLM-Apps-that-can-See-Hear-Speak.ipynb  meta.toml
notebooks/Image Matching with SQL/: Image Matching with SQL.ipynb
notebooks/Movie Recommendation/: Movie Recommendation.ipynb
notebooks/Notebook Basics/: Notebook Basics.ipynb
notebooks/Projections/: Projections.ipynb
notebooks/Semantic Search with OpenAI Embedding Creation/: Semantic Search with OpenAI Embedding Creation.ipynb
resources/: author-check.py  lesson-check.py  nb-check.py  nb-meta-check.py  package-samples.py  toml-check.py
(+192 files in other folders)
