[metadata]
name = spaces_notebooks
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: Apache Software License

[flake8]
exclude =
    docs/*
    resources/*
    licenses/*
max-complexity = 30
max-line-length = 90
